--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
-
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Página de prueba<title>
-</head>
-<body>
-  <h1>Hola amiguitos!</h1>
-  <footer>gpuma 2017</footer>
-</body>
+  <head>
+    <title>
+      Manan Goel
+    </title>
+    <link rel="stylesheet" type="text/css" href="indexstyle.css">
+  </head>
+  <body>
+    <div class="extra" style="width: 100%; height: 100%; background-color: black">Sorry Page opens only above 960px</div>
+    <div class="navbar">
+      <a href="index.html">Home</a>
+      <a href="aboutme.html">About Me</a>
+      <a href="contactme.html">Contact Me</a>
+      <a href="canvas.html">Canvas</a>
+    </div>
+
+    <div class="main-text" align="center">
+      <div class="Name">Manan Goel</div>
+      <div class="photog">Photographer</div>
+      <div class="read">Reader</div>
+      <div class="Gamer">Gamer</div>
+      <div class="kickasscap">Grow Through What You Go Through</div>
+    </div>
+  </body>
 </html>
