--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Manan Goel</a></h1>
-				<span class="position">Software Developer in India</span>
+				<span class="position">Software Developer and Data scientist</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -153,7 +153,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="col-md-4 animate-box" data-animate-effect="fadeInBottom">
 									<div class="services color-4">
 										<span class="icon2"><i class="icon-phone3"></i></span>
-										<h3>Application</h3>
+										<h3>Machine Learning</h3>
 									</div>
 								</div>
 							</div>
@@ -174,11 +174,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<span class="colorlib-counter-label">Cups of coffee</span>
 						</div>
 						<div class="col-md-4 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="6" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="13" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Projects</span>
 						</div>
 						<div class="col-md-4 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="2" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="6" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Partners</span>
 						</div>
 					</div>
@@ -196,7 +196,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div class="row">
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 							<p>
-								Most of my experience is with server side scripting, game development and creating/optimising web crawlers.
+								Most of my experience is with server side scripting, game development, creating/optimising web crawlers, database management and Machine Learning with Cheminformatics.
 							</p>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
@@ -287,6 +287,28 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								</div>
 							</div>
 						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="progress-wrap">
+								<h3>Machine Learning</h3>
+								<div class="progress">
+									<div class="progress-bar color-3" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+										aria-valuemax="100" style="width:80%">
+										<span>80%</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="progress-wrap">
+								<h3>Blockchain and Ethereum</h3>
+								<div class="progress">
+									<div class="progress-bar color-4" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+										aria-valuemax="100" style="width:60%">
+										<span>60%</span>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -315,7 +337,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									         <div class="panel-body">
 									            <div class="row">
 										      		<div class="col-md-12">
-										      			<p>I'm pursuing my Bachelor's degree in <strong>International Institute of Information Technology in Hyderabad</strong> and am currently in my third year.</p>
+										      			<p>I'm pursuing my Bachelor's degree in <strong>International Institute of Information Technology in Hyderabad</strong> and am currently in my fourth year.</p>
 										      		</div>
 										      	</div>
 									         </div>
@@ -352,6 +374,84 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div class="row">
 						<div class="col-md-12">
 				         <div class="timeline-centered">
+							<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+
+					               <div class="timeline-icon color-3">
+					                  <i class="icon-pen2"></i>
+					               </div>
+
+					               <div class="timeline-label">
+					                  <h2><a href="#">Undergraduate Researcher at CCNSB</a> <span>2019 - Present</span></h2>
+					                  <p>
+										Finding different Machine Learning Applications to solve Computational Chemistry and Cheminformatics Problems.
+									  </p>
+					               </div>
+					            </div>
+					         </article>
+							<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+
+					               <div class="timeline-icon color-2">
+					                  <i class="icon-pen2"></i>
+					               </div>
+
+					               <div class="timeline-label">
+					                  <h2><a href="#">Google Summer of Code Intern</a> <span>2020</span></h2>
+					                  <p>
+										  My project aimed to add support for ANI style neural networks to the RDKit cheminformatics package as an additional Force Field for 
+										  studying molecular conformers. This involved implementing neural networks from scratch in C++ using only linear algebra libraries while 
+										  implementing back propogation.
+										  <br />
+										  Along with this I also implemented python wrappers for all the C++ functionalities so that it more widely usable.
+
+									  </p>
+					               </div>
+					            </div>
+							 </article>
+							 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+
+					               <div class="timeline-icon color-5">
+					                  <i class="icon-pen2"></i>
+					               </div>
+
+					               <div class="timeline-label">
+					                  <h2><a href="#">Teaching Assistant for Computing in Sciences</a> <span>2020</span></h2>
+					               </div>
+					            </div>
+					         </article>
+							 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+
+					               <div class="timeline-icon color-4">
+					                  <i class="icon-pen2"></i>
+					               </div>
+
+					               <div class="timeline-label">
+					                  <h2><a href="#">Full Stack Development Intern at Khaata.in</a> <span>2019</span></h2>
+					                  <p>
+										Developing new features for the Flask based webapp of the company.
+										<br />
+										Maintain previously implemented features and tweak them according to client feedback.
+										<br />
+										Implement functional and unit tests for the web app in Docker using pytest and Selenium.
+									  </p>
+					               </div>
+					            </div>
+							 </article>
+							 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+
+					               <div class="timeline-icon color-5">
+					                  <i class="icon-pen2"></i>
+					               </div>
+
+					               <div class="timeline-label">
+					                  <h2><a href="#">Teaching Assistant for Advanced Biomolecular Architecture</a> <span>2019</span></h2>
+					               </div>
+					            </div>
+					         </article>
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 
@@ -395,14 +495,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<a href="https://github.com/manangoel99/BestBhojv2">
-								<div class="project" style="background-image: url(images/img-1.jpg);">
+								<div class="project" style="background-image: url(images/img-1.png);">
 									<div class="desc">
 										<div class="con">
-											<h3><a href="https://github.com/manangoel99/BestBhojv2">POS for a Catering Start-Up</a></h3>
-											<span>I designed a web-based POS system for Best Bhoj, an eatery in my
-											hometown, Karnal since they had multiple branches and the
-											databases needed to be in sync. The back-end was implemented in
-											Django with database management done in SQLite3.</span>
+											<h3><a href="https://github.com/manangoel99/Shell">POSIX Shell</a></h3>
+											<span>
+												An implementation of the POSIX Shell from scratch in C using only system calls. 
+												Functionalities include basic shell commands including commands for process management along with a few custom commands.
+											</span>
 										</div>
 									</div>
 								</div>
@@ -412,14 +512,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="project" style="background-image: url(images/img-2.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://frejun.com/">Voice Assistant for the FreJun Meeting Assistant</a></h3>
+										<h3><a href="https://github.com/manangoel99/EmotionDetector">EdVid</a></h3>
 										<span>
-											FreJun is a Hyderabad based start-up with whom I worked in a team
-											as a part of Structured Software Analysis and Design. Their product is
-											a meeting assistant which can be used to take down minutes of a
-											meeting, action items etc. Our job was to provide a Proof of Concept of
-											a Voice Assistant which can add the aforementioned on voice
-											commands. To achieve that we used the Google WebSpeech API.
+											A webapp for annotating videos with face detection along with emotion annotation in 7 classes.
+											Face recognition using the FaceNet model with emotion detection using a model built with dilated convolution layers.
+											Deployed using a Flask backend.
+											All the frames are processed parallely on a CPU using the ray library.
 										</span>
 									</div>
 								</div>
@@ -478,25 +576,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									<i class="icon-globe-outline"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="https://researchweb.iiit.ac.in/~manan.goel">researchweb.iiit.ac.in/~manan.goel</a></p>
-								</div>
-							</div>
-
-							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
-								<div class="colorlib-icon">
-									<i class="icon-map"></i>
-								</div>
-								<div class="colorlib-text">
-									#408, Bakul Nivas, IIIT-H, Gachibowli, Hyderabad
-								</div>
-							</div>
-
-							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInLeft">
-								<div class="colorlib-icon">
-									<i class="icon-phone"></i>
-								</div>
-								<div class="colorlib-text">
-									<p><a href="tel://">+91 7015 658 367</a></p>
+									<p><a href="mailto:manan.goel@research.iiit.ac.in">manan.goel@research.iiit.ac.in</a></p>
 								</div>
 							</div>
 						</div>
