--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 										<h2 class="colorlib-heading">Who Am I?</h2>
 										<p>
 											<strong>Hi I'm Manan Goel,</strong>
-											I am from Karnal a small town situated in Haryana, currently studying in IIIT Hyderabad. I've been given quite a few responsobolities since my childhood. I was a part
+											I am from Karnal a small town situated in Haryana, currently studying in IIIT Hyderabad. I've been given quite a few responsibilities since my childhood. I was a part
 											of the student's council which dealt with the management of school level event. I was elected as the deputy head which my school called the ASPL which gave me invaluable
 											experience.
 										</p>
