Updated information and Resume

--- a/index.html
+++ b/index.html
@@ -388,6 +388,21 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 									  </p>
 					               </div>
 					            </div>
+							 </article>
+							 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+
+					               <div class="timeline-icon color-3">
+					                  <i class="icon-pen2"></i>
+					               </div>
+
+					               <div class="timeline-label">
+					                  <h2><a href="#">AI/ML Intern at PredOmix Pvt. Ltd.</a> <span>2019 - Present</span></h2>
+					                  <p>
+										Generating drug like molecules using Machine Learning for targeted diseases.
+									  </p>
+					               </div>
+					            </div>
 					         </article>
 							<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
@@ -452,7 +467,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               </div>
 					            </div>
 					         </article>
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					         <!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 
 					               <div class="timeline-icon color-1">
@@ -466,7 +481,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 														in the least amount of time along with making a proxy rotator</p>
 					               </div>
 					            </div>
-					         </article>
+					         </article> -->
 
 					         <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
 					            <div class="timeline-entry-inner">
